bugfix: 安卓初次进入拍照按钮不显示bugfix，tabbar兼容iphoneX

--- a/src/custom-tab-bar/index.wxml
+++ b/src/custom-tab-bar/index.wxml
@@ -6,6 +6,6 @@
     <cover-view style="color: {{selected === index ? selectedColor : color}}">{{item.text}}</cover-view>
   </cover-view>
 </cover-view>
-<cover-view class="camera-wrap" bindtap="jumpToCameraPage">
+<cover-view class="camera-wrap {{isIpX ? 'bottom' : ''}}" bindtap="jumpToCameraPage">
   <cover-image src="../imgs/icon_camera.png" class="icon-camera"></cover-image>
 </cover-view>
