--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -46,6 +46,7 @@
         // align-items center
         background #fff
         border-bottom 1rpx solid #eee
+        padding-top: 18rpx
         .tab-item 
             flex 1
             height 60rpx
@@ -62,9 +63,35 @@
             &.dry
                 background black
             &.active
-                font-size 28rpx
+                font-size 30rpx
                 font-weight bold
-                border-bottom 1rpx solid #000
+                // border-bottom 1rpx solid #000
             &.hover-bg
                 background #eee
+    .title
+        position fixed
+        right 30rpx
+        bottom 200rpx
+        font-weight bold
+        display flex
+        align-items center
+        font-size 28rpx
+        color #000
+        background #eee
+        padding 0 24rpx
+        height 60rpx
+        border-radius 60rpx
+        // margin-top 48rpx
+        // border-bottom 1rpx solid #999
+    .icon-notice
+        position fixed
+        right 30rpx
+        bottom 200rpx
+        width 40rpx
+        height 40rpx
+        margin-right 12rpx
+        background #ccc
+        border-radius 40rpx
+        border 12rpx solid #ccc
+
                 
