--- a/src/pages/search/index.styl
+++ b/src/pages/search/index.styl
@@ -19,10 +19,14 @@
                 top 50%
                 transform translateY(-50%)
             .icon-clear
+            .icon-camera
                 position absolute
                 right 30rpx
                 top 50%
-                transform translateY(-50%)        
+                transform translateY(-50%) 
+            .icon-camera
+                width 50rpx
+                height 50rpx
             .input  
                 height 100%
                 padding-left 72rpx
@@ -53,7 +57,7 @@
         font-size 28rpx
         color #000
         font-weight bold
-        margin-bottom 28rpx
+        margin 28rpx 0
         .icon-clear-history
             width: 25.2rpx;
             height: 31.2rpx;
