--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -40,7 +40,7 @@
         width 100%
         height 80rpx
         box-sizing border-box
-        padding-left 30rpx
+        padding 0 30rpx
         background #f8f8f8
         border-radius 80rpx
         border 1rpx solid #eee 
@@ -48,6 +48,13 @@
             margin-left 12rpx
             font-size 28rpx
             color #666
+        .icon-camera
+            // position absolute
+            // right 30rpx
+            // top 50%
+            width 50rpx
+            height 50rpx
+            margin-left auto
     .banner
         width 100%
         border-radius 10rpx
