--- a/src/components/garbageTypeItem/index.styl
+++ b/src/components/garbageTypeItem/index.styl
@@ -102,7 +102,7 @@ $dry-color = #FF8B00
         View:nth-of-type(odd)
             background #eee
         View:nth-of-type(even)
-            background #d9d9d9
+            background #fff
     .kind-item
         font-size: 26rpx
         color #000
