chore: 首页样式优化：极简风格，tabbar新增分类入口，拍照加入从相册选择和切换摄像头方向

--- a/src/pages/camera/index.styl
+++ b/src/pages/camera/index.styl
@@ -1,16 +1,28 @@
 .camera
     width 100%
     height 100vh
-.btn
-    position fixed
-    width 100rpx
-    height 100rpx
-    border-radius 100rpx
-    border 20rpx solid #eee
-    left 50%
-    bottom 100rpx
-    margin-left -70rpx
-    background #fff
+    .btn-wrap
+        position fixed
+        width 100%
+        bottom 100rpx
+        padding 0 66rpx
+        box-sizing border-box
+        display flex
+        align-items center
+        justify-content space-between
+        .btn
+            // position fixed
+            width 100rpx
+            height 100rpx
+            border-radius 100rpx
+            border 20rpx solid #eee
+            background #fff
+        .icon-back
+            width 66rpx
+            height 66rpx
+        .icon-change
+            width 66rpx
+            height 66rpx
 .mask
     position fixed
     width 100%
