--- a/src/pages/search/index.styl
+++ b/src/pages/search/index.styl
@@ -10,7 +10,7 @@
             height 80rpx
             box-sizing border-box
             padding-right 60rpx
-            background #f8f8f8
+            background #eee
             border-radius 80rpx
             border 1rpx solid #eee
             .icon-search 
