chore: 接入客服功能，分类样式修改

--- a/src/components/garbageTypeItem/alipay.styl
+++ b/src/components/garbageTypeItem/alipay.styl
@@ -85,10 +85,12 @@ $dry-color = #FF8B00
             height 60rpx
             line-height 60rpx
             padding-left 24rpx
-        View:nth-of-type(odd)
             background #eee
-        View:nth-of-type(even)
-            background #fff
+            margin-top 12rpx
+        // View:nth-of-type(odd)
+        //     background #eee
+        // View:nth-of-type(even)
+        //     background #fff
             // border-right 1rpx solid #999
             // border-bottom 1rpx solid #999
             // &.border-top
