--- a/src/pages/classification/alipay.styl
+++ b/src/pages/classification/alipay.styl
@@ -1,10 +1,9 @@
 .index
-    // padding 0 30rpx
+    padding 0 30rpx
     padding-bottom 66rpx
     background #fff
-.swiper-item
-    padding 0 30rpx
-    box-sizing border-box
+// .swiper
+//     min-height 100vh
 .tab-container
     display flex
     position sticky
@@ -13,8 +12,7 @@
     // align-items center
     background #fff
     border-bottom 1rpx solid #eee
-    // padding-top: 18rpx
-    padding 0 12rpx
+    padding-top: 18rpx
     .tab-item 
         flex 1
         height 60rpx
@@ -31,5 +29,5 @@
         &.dry
             color #FF8B00
         &.active
-            font-size 30rpx
+            font-size 28rpx
             font-weight bold
