--- a/src/pages/index/index.styl
+++ b/src/pages/index/index.styl
@@ -1,5 +1,27 @@
 .strong
     font-weight bold
+.bottom
+    position fixed
+    bottom 30rpx
+    left 50%
+    transform translate(-50%)
+    font-size 26rpx
+    line-height 40rpx
+    color #999
+    .icon-contact 
+        width 40rpx
+        height 40rpx
+        margin-right 12rpx
+        vertical-align middle
+    // .feed-back
+    //     color #999
+    Button
+        position absolute
+        top 0
+        right 0
+        bottom 0
+        left 0
+        opacity 0
 .index
     // padding 28rpx 30rpx 140rpx
     width 100%
