--- a/src/pages/search/index.styl
+++ b/src/pages/search/index.styl
@@ -1,9 +1,15 @@
 .search
-    padding 0 30rpx
+    // 支付宝
+    padding 30rpx
+    padding-bottom 0
+    min-height 100vh
+    background #fff
+    // 微信
+    // padding 0 30rpx
     .header
         display flex
         align-items center
-        margin 28rpx 0
+        margin-bottom 28rpx
         .input-wrap 
             position relative
             width 100%
@@ -27,10 +33,20 @@
             .icon-camera
                 width 50rpx
                 height 50rpx
-            .input  
+            .input 
+                // 支付宝 
                 height 100%
+                width 100%
+                padding-right 60rpx
+                box-sizing border-box
                 padding-left 72rpx
+                border-radius 80rpx
                 font-size 28rpx
+                background #eee
+                // 微信
+                // height 100%
+                // padding-left 72rpx
+                // font-size 28rpx
         .cancel-btn 
             width 100rpx
             font-size 28rpx
