chore: 增加热门搜索数据，优化拍照结果显示

--- a/src/pages/camera/index.styl
+++ b/src/pages/camera/index.styl
@@ -40,7 +40,7 @@
         // transform translate(-50%, -50%)
         border-radius 10rpx
         background #fff
-        padding-top 30rpx
+        padding-top 30rpx 
         .modal-title
             font-size 36rpx
             color #000
@@ -72,7 +72,7 @@
                 font-size 24rpx
         .btn-row
             display flex
-            border-top 1rpx solid #999
+            // border-top 1rpx solid #999
             // position relative
             // &::after
             //     content: ''
@@ -90,8 +90,7 @@
                 font-size 30rpx
                 &.exit
                     color #666
-                    border-right 1rpx solid #999
+                    border 1rpx solid #999
                 &.continue
-                    color #000
-
-
+                    color #1789E5
+                    border 1rpx solid #999
